# SteamSalesReporter

./: .gitignore  AI_DEBUG_GUIDE.md  MIGRATION_NOTES.md  README.md  electron.vite.config.ts  eslint.config.js  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/: main.ts  preload.ts
electron/services/: database.ts  secure-storage.ts  steam-api.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  secure_storage.rs  steam_api.rs  types.rs
src-tauri/src/database/: api_keys.rs  cleanup.rs  migrations.rs  mod.rs  sales.rs  sync_tasks.rs
src/lib/components/: ApiKeyModal.svelte  ChartsView.svelte  CountryChart.svelte  Dashboard.svelte  DataTableView.svelte  DatabaseStats.svelte  FilterBar.svelte  KimStyleReport.svelte  LaunchComparison.svelte  PackageMetrics.svelte  ProductLaunchTable.svelte  RawDataMetrics.svelte  RefreshProgressModal.svelte  RevenueChart.svelte  SalesTable.svelte  SkuComparison.svelte  StatsCards.svelte  UnicornLoader.svelte
src/lib/db/: aggregates.ts  api-keys.ts  data-processor.ts  data-state.ts  dexie.ts  display-cache.ts  parsed-data.ts  parser.ts  raw-data.ts  sqlite-schema.ts  sqlite.ts
src/lib/scripts/: debug-queries-browser.ts
src/lib/services/: api-key-storage.ts  browser.ts  electron.ts  index.ts  steam-api-client.ts  sync-orchestrator.ts  sync-service.ts  sync-tasks.ts  tauri.ts  types.ts
src/lib/shared/: steam-transform.ts
src/lib/stores/: sales.ts
src/lib/utils/: async-state.ts  charts.ts  countries.ts  csv-export-hooks.ts  csv-export.ts  dates.ts  fetch-retry.ts  filters.ts  formatters.ts  launch-metrics.ts  tauri.ts
src/lib/workers/: aggregation.worker.ts  index.ts
src/scripts/: debug-queries-browser.js  debug-queries.ts
(+5 files in other folders)
