[package]
name = "steam-sales-analyzer"
version = "1.0.0"
description = "Interactive Steam sales data analyzer with graphs and analysis"
authors = ["Steam Sales Analyzer"]
edition = "2021"

[lib]
name = "steam_sales_analyzer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "1"
directories = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
