[package]
name = "steam-sales-analyzer"
version = "1.0.0"
description = "Interactive Steam sales data analyzer with graphs and analysis"
authors = ["Steam Sales Analyzer"]
edition = "2021"

[lib]
name = "steam_sales_analyzer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
